[package]
name = "two_piece_hexagons"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2018"

[dependencies]

[dependencies.web]
path = "libs/web"

[dependencies.game]
path = "libs/game"

[features]
default = []
invariant-checking = ["game/invariant-checking"]
logging = ["game/logging"]

[profile.dev]
opt-level = 2
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
